apps/utilities/glance/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: glance
  namespace: utilities
  labels:
    app: glance
    tier: utilities
spec:
  type: ClusterIP
  selector:
    app: glance
    tier: utilities
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
