apps/utilities/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: utilities
  labels:
    app: glance
    tier: utilities
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: glance.lan.shiba-toast.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 80
  tls:
    - hosts:
        - glance.lan.shiba-toast.com
      secretName: glance-tls
